--- a/news-api/.eslintrc.json
+++ b/news-api/.eslintrc.json
@@ -1,9 +1,12 @@
 {
-    "plugins": ["prettier", "import"],
+    "plugins": ["prettier", "import", "@typescript-eslint"],
     "extends": [
         "plugin:prettier/recommended",
-        "prettier"
+        "prettier",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommend"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
@@ -14,8 +17,9 @@
         "node": true
     },
     "rules": {
-        "no-debugger": "off",
+        "no-debugger": 0,
         "no-console": 0,
-        "class-methods-use-this": "off"
+        "class-methods-use-this": 0,
+        "@typescript -eslint/no-explicit-any": 2
     }
 }
