--- a/news-api/.eslintrc.json
+++ b/news-api/.eslintrc.json
@@ -1,10 +1,10 @@
 {
     "plugins": ["prettier", "import", "@typescript-eslint"],
     "extends": [
-        "plugin:prettier/recommended",
-        "prettier",
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommend"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -20,6 +20,7 @@
         "no-debugger": 0,
         "no-console": 0,
         "class-methods-use-this": 0,
-        "@typescript -eslint/no-explicit-any": 2
-    }
+        "@typescript-eslint/no-explicit-any": 2
+    },
+    "ignorePatterns": "**/*.js"
 }
