--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -1,44 +1,44 @@
 {
-    "name": "rss-puzzle",
-    "version": "1.0.0",
-    "description": "",
-    "main": "webpack.config.js",
-    "scripts": {
-        "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-        "build": "webpack --config ./webpack.config.js --env mode=prod",
-        "lint": "eslint . --ext .ts --fix",
-        "format": "prettier . --write",
-        "ci:format": "prettier .",
-        "prepare": "cd .. && husky rss-puzzle/.husky"
-    },
-    "author": "Nelany",
-    "license": "ISC",
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.0.2",
-        "@typescript-eslint/parser": "^7.0.2",
-        "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^12.0.2",
-        "css-loader": "^6.10.0",
-        "eslint": "^8.56.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-webpack-plugin": "^4.0.1",
-        "html-webpack-plugin": "^5.6.0",
-        "husky": "^9.0.11",
-        "prettier": "3.2.5",
-        "style-loader": "^3.3.4",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.3.3",
-        "validate-branch-name": "^1.3.0",
-        "webpack": "^5.90.1",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.0",
-        "webpack-merge": "^5.10.0"
-    },
-    "validate-branch-name": {
-        "pattern": "^(init|fix|refactor|docs)/(RSS-PZ-\\d{2}_\\w+|rss-puzzle)$",
-        "errorMsg": "your own error message"
-    }
+  "name": "rss-puzzle",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "scripts": {
+    "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
+    "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "lint": "eslint . --ext .ts --fix",
+    "format": "prettier . --write",
+    "ci:format": "prettier .",
+    "prepare": "cd .. && husky rss-puzzle/.husky"
+  },
+  "author": "Nelany",
+  "license": "ISC",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
+    "prettier": "3.2.5",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "validate-branch-name": "^1.3.0",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.0",
+    "webpack-merge": "^5.10.0"
+  },
+  "validate-branch-name": {
+    "pattern": "^(init|fix|refactor|docs|feat)/(RSS-PZ-\\d{2}_\\w+|rss-puzzle)$",
+    "errorMsg": "error"
+  }
 }
