--- a/rss-puzzle/.eslintrc.json
+++ b/rss-puzzle/.eslintrc.json
@@ -1,12 +1,6 @@
 {
   "plugins": ["prettier", "import", "@typescript-eslint"],
-  "extends": [
-    "eslint:recommended",
-    "airbnb",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
-    "prettier"
-  ],
+  "extends": ["eslint:recommended", "airbnb", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
